style/styles.css
* {
    box-sizing: border-box;
    /* border:1px solid black; */
    padding: 0px;
    margin: 0px;
}

/*
Colours:
#2C6975
#6BB2AD
#CDE0C9
#E0ECDE
#FFFFFF

Transition colours:
#4c8e92
*/

body {
    height: 100vh;
    width: 100vw;
    background-color: #CDE0C9;
    display: flex;
    justify-content: center;
    align-items: center;

    position:fixed;
    top:0;
    bottom:0;
    right:0;
    left:0;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    /* font-family: 'Rubik Beastly', cursive; */
}

nav { 
    min-width: 100%;
    min-height: 60vh;
    /* background-color: #2C6975; */
    background: rgb(107,178,173);
    background: linear-gradient(180deg, rgba(107,178,173,1) 0%, rgba(44,105,117,1) 100%);
    border-radius: 0px 0px 0px 20px;

    transform: 0.5;
}

ul {
    height: auto;
    width: 100%;
    list-style: none;
}

#main-wrapper {
    min-width: 80%;
    min-height: 100vh;

    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: stretch;

    background-color: #CDE0C9;
}

#nav-wrapper {
    min-width: 15%;
    min-height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    color: #E0ECDE;

    /* box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px; */
}

#app-title {
    width: 100%;
    min-height: 10%;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

#title {
    color: #2C6975;
    font-size: 1.75em;
    margin-left: 5px;
}

#app-logo {
    width: 50px;
    height: 50px;
}

#profile {
    width: 100%;
    /* min-height: 30%; */
    height: 30vh;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    /* background-color: #2C6975; */
    background: rgb(107,178,173);
    background: linear-gradient(0deg, rgba(107,178,173,1) 0%, rgba(44,105,117,1) 100%);
    border-radius:20px 0px 0px 0px;
}

#user-profile-pic {
    width: 50px;
    height: 50px;
}

#profile-username {
    font-size: 1.25em;
    margin: 5px;
}

#profile-email {
    font-size: 1em;
    margin: 5px;
    display: none;
}

#log-out-btn {
    font-size: 0.8em;
    color: #CDE0C9;
    cursor: pointer;
    background: transparent;
    border: none;
    margin-top: 5px;
}

#log-out-btn:hover {
    transition: 0.5s;
    /* color: #CDE0C9; */
    color: #E0ECDE;
}

#menu {
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: flex-start;
    padding: 0px;
    margin: 0px;
}

.menu-option {
    display: flex;
    flex-direction: row;
    align-items: center;

    height: 10%;
    padding: 8px;
    margin-top: 5px;
    margin-bottom: 1rem;
    
    min-width: 85%;
    max-width: 85%;
    cursor:pointer;
    transition: 0.25s;
}

.menu-option span {
    margin-left: 1rem;
    font-size: 1.15em;
}

.option-img {
    width: 30px;
    height: 30px;
    margin-left: 1rem;
}

.active-menu-option {
    background-color: #CDE0C9;
    color: #2C6975;
    border-radius: 20px 0px 0px 20px;
}

/*
.active-menu-option::after {
    content: '';
    position: relative;
    top: -74%; 
    right: -14.5%; 

    width: 15px;
    height: 15px;
    box-shadow:inset -4.5px -4.5px 0px 0px #CDE0C9;
    border-bottom-right-radius: 20px;
    background-color: #2C6975;
}

.active-menu-option::before {
    content: '';
    position: relative;
    top: 32px;
    right: -177px;

    width: 15px;
    height: 15px;
    box-shadow:inset -4.5px 4.5px 0px 0px #CDE0C9;
    border-top-right-radius: 20px;
    background-color: #2C6975;
} */

#listfield-wrapper {
    min-width: 25%;
    max-width: 25%;
    height: 100vh;

    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    
    background-color: #CDE0C9;
}

#listfield-title {
    display: flex;
    justify-content: center;
    align-items: center;
    color: #2C6975;
    min-height: 10%;
    font-size: 1.5em;
    /* background-color: #6BB2AD; */
    background: rgb(44,105,117);
    background: linear-gradient(90deg, rgba(44,105,117,1) 0%, rgba(107,178,173,1) 100%);
    border-radius: 20px 0px 0px 0px;
}

#listfield-title {
    width: 100%;
    min-height: 10%;
    color: #CDE0C9;
}

#search-wrapper { 
    width: 100%;
    min-height: 10%;
    max-height: 10%;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
}

#new-chat-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 3rem;
    height: 50%;
    border-radius: 20px;
    background: #6BB2AD;
    font-size: 2em;
    color: #2C6975;
    border: none;
    cursor: pointer;
}

#searchfield {
    border: none;
    width: 50%;
    height: 50%;
    padding: 1rem;
    border-radius: 0px 20px 20px 0px;
    background: #E0ECDE;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
    outline: none;
    transition: 0.5s ease-in-out;
}

#searchfield:hover {
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 6px 9px;
    transition: 0.25s ease-in-out;
}

#searchfield:focus {
    width: 80%;
    transition: 0.5s ease-in-out;
}

#searchfield::placeholder {
    color: #2C6975;
}

#search-results-buffer {
    position: absolute;
    top: 18vh;
    left: 22vw;

    min-height: 22.90vh;
    min-width: 20vw;
    height: auto;
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    background: #4c8e92;
    border-radius: 5px 5px 5px 5px;
    border: 1px solid #CDE0C9;
    z-index: 3;
}
/* ... */

